--- a/src/features/counter/Counter.module.css
+++ b/src/features/counter/Counter.module.css
@@ -23,7 +23,7 @@
 .button {
   appearance: none;
   background: none;
-  font-size: 32px;
+  font-size: 20px;
   padding-left: 12px;
   padding-right: 12px;
   outline: none;
@@ -37,9 +37,9 @@
 }
 
 .textbox {
-  font-size: 32px;
+  font-size: 20px;
   padding: 2px;
-  width: 64px;
+  width: 10em;
   text-align: center;
   margin-right: 4px;
 }
