--- a/src/features/products/Products.module.css
+++ b/src/features/products/Products.module.css
@@ -1,6 +1,6 @@
 .cardContainer {
     position: relative;
-    margin: 0.5em;
+    margin: 0.1em;
     padding-bottom: 1em;
 }
 
@@ -18,6 +18,25 @@
     display: flex;
 }
 
-.sell-btn {
-    margin-bottom: 1em;
+.numItems {
+    position: absolute;
+    top: 1em;
+    right: 1em;
+    font-weight: bold;
+    font-size: 1.1em;
+    margin-left: 1em;
+}
+
+.btnContainer {
+    padding: 0.4em;
+}
+
+.btn {
+    border: 1.5px black solid;
+    margin-right: 0.3em;
+}
+
+.priceInput {
+    width: 4em;
+    margin-left: 5em;
 }
